# candle

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  README_zh.md  bench_torch_npu.py  pyproject.toml  setup.py
.claude/agents/: code-reviewer.md  compat-tester.md  git-agent.md  test-runner.md
.claude/commands/: compat.md
.github/: pylint.conf
.github/scripts/: openi_ci.py  trigger_ci.txt
.github/tests/: test_openi_ci_self_hosted.py
.github/workflows/: ci.yaml  compat-transformers.yaml  npu-310b.yaml  npu.yaml  openi-910a-pr.yml  release.yaml
benchmarks/op_benchmark_npu/: cases.py  report.py  run.py  runner.py  worker.py
benchmarks/pipeline_npu/: bench.py  cases.py
compat/: README.md  conftest.py  models.yaml  requirements.txt  run.py  test-and-report.sh  xfail.yaml
compat/pytorch/: README.md  conftest.py  requirements.txt  run.py  test-and-report.sh  tests.yaml  xfail.yaml
docs/: cpu-gap-static.md  deferred-cython-candidates.md  install-npu.md  known-kernel-issues.md  pr-autograd-saved-tensors.md  support-matrix.md
docs/plans/: 2026-03-08-mindtorch-to-candle-migration.md  2026-03-09-cpu-parity-p1-implementation.md  2026-03-09-npu-first-0.1-design.md  2026-03-09-npu-first-0.1-implementation-plan.md  2026-03-10-fsdp2-mvp-design.md  2026-03-10-fsdp2-mvp-impl-plan.md  2026-03-10-npu-memcpy-routing-design.md  2026-03-10-npu-memcpy-routing-plan.md  2026-03-11-cpu-inplace-activations.md  2026-03-11-cpu-pool-unpool-1d2d-implementation.md  2026-03-11-mps-gpu-rng-design.md  2026-03-12-autograd-rename-design.md  2026-03-12-autograd-saved-tensors-implementation.md  2026-03-12-cpu-sum-to-size-design.md  2026-03-12-cpu-sum-to-size-implementation-plan.md  2026-03-12-cpu-unary-schema-parity-plan.md  2026-03-12-cpu-view-slice-design.md  2026-03-12-cpu-view-slice-implementation-plan.md  2026-03-13-cpu-creation-dtype-parity-plan.md  (+9 more)
requirements/: requirements-lint.txt  requirements-test-mps.txt  requirements-test.txt  requirements.txt
results/: op_benchmark_20260316_114135.md  op_benchmark_20260316_114412.md
tests/: conftest.py  run_test.py  test_310b_watchlist_npu.py  test_acl_loader.py  test_acl_utils.py  test_autograd.py  test_autograd_api.py  test_autograd_broadcast.py  test_autograd_function.py  test_autograd_inplace.py  test_autograd_ops.py  test_backward_round2.py  test_broadcast.py  test_compat_pytorch_run.py  test_cpu_backend_layout.py  test_creation.py  test_cuda_backend.py  test_custom_kernel.py  test_custom_op.py  test_ddp.py  test_ddp_bucket_view.py  test_ddp_builtin_hooks.py  test_ddp_comm_hook.py  test_ddp_cpu.py  test_ddp_static_graph.py  test_ddp_unused_params.py  test_device_index.py  test_device_transfer.py  test_dispatch_autograd_wrappers.py  test_dispatch_keys.py  test_dispatch_pipeline.py  test_dispatch_redispatch.py  test_dispatch_registry.py  test_dispatch_resolution.py  test_dispatch_tls_modes.py  test_dispatch_unify.py  test_distributed_mvp_baseline.py  test_distributed_sampler_baseline.py  test_dtype_device.py  test_dtype_utils.py  (+65 more)
(+389 files in other folders)
